chore(release): publish v1.0.1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "call-later",
+	"name": "calllater",
 	"version": "1.0.0",
 	"description": "Defer a task to execute it asynchronously.",
 	"keywords": [
@@ -22,7 +22,7 @@
 	"devDependencies": {
 		"jest": "^27.3.1"
 	},
-	"repository": "https://github.com/porky-prince/call-later.git",
-	"homepage": "https://github.com/porky-prince/call-later#readme",
-	"bugs": "https://github.com/porky-prince/call-later/issues"
+	"repository": "https://github.com/porky-prince/calllater.git",
+	"homepage": "https://github.com/porky-prince/calllater#readme",
+	"bugs": "https://github.com/porky-prince/calllater/issues"
 }
